Add average, maximum and minimum endpoints
