# app/humidity/humidity.controller.js
@@ -23,10 +23,49 @@ function create(req, res, next) {
     .catch(e => next(e))
 }
 
+function average(req, res, next) {
+  const filter = filterByTime(req.query.from, req.query.to)
+
+  Humidity
+    .aggregate()
+    .match(filter)
+    .group({ _id: null, average: { $avg: '$humidity' } })
+    .project({ _id: 0 })
+    .exec()
+    .then(average => res.status(200).json(average[0]))
+    .catch(e => next(e))
+}
+
+function minimum(req, res, next) {
+  const filter = filterByTime(req.query.from, req.query.to)
+
+  Humidity
+    .aggregate()
+    .match(filter)
+    .group({ _id: null, minimum: { $min: '$humidity' } })
+    .project({ _id: 0 })
+    .exec()
+    .then(average => res.status(200).json(average[0]))
+    .catch(e => next(e))
+}
+
+function maximum(req, res, next) {
+  const filter = filterByTime(req.query.from, req.query.to)
+
+  Humidity
+    .aggregate()
+    .match(filter)
+    .group({ _id: null, minimum: { $max: '$humidity' } })
+    .project({ _id: 0 })
+    .exec()
+    .then(average => res.status(200).json(average[0]))
+    .catch(e => next(e))
+}
+
 function errorHandler(err, req, res, next) {  // eslint-disable-line no-unused-vars
   const error = { code: err.name, message: err.message, details: err.errors }
   logger.error(error)
   res.status(500).json(error)
 }
 
-export default { list, create, errorHandler }
+export default { list, create, average, minimum, maximum, errorHandler }
