# app/localController/localController.routes.js
@@ -16,6 +16,18 @@ router
   .get(Controller.listHumidity)
 
 router
+  .route('/:controllerId/humidity/average')
+  .get(Controller.getHumidityAverage)
+
+router
+  .route('/:controllerId/humidity/minimum')
+  .get(Controller.getHumidityMinimum)
+
+router
+  .route('/:controllerId/humidity/maximum')
+  .get(Controller.getHumidityMaximum)
+
+router
   .route('/:controllerId/presence')
   .get(Controller.listPresence)
 
@@ -26,6 +38,18 @@ router
 router
   .route('/:controllerId/temperature')
   .get(Controller.listTemperature)
+
+router
+  .route('/:controllerId/temperature/average')
+  .get(Controller.getTemperatureAverage)
+
+router
+  .route('/:controllerId/temperature/minimum')
+  .get(Controller.getTemperatureMinimum)
+
+router
+  .route('/:controllerId/temperature/maximum')
+  .get(Controller.getTemperatureMaximum)
 
 router.use(Controller.errorHandler)
 
