# app/temperature/temperature.routes.js
@@ -8,6 +8,18 @@ router
   .get(Controller.list)
   .post(Controller.create)
 
+router
+  .route('/average')
+  .get(Controller.average)
+
+router
+  .route('/minimum')
+  .get(Controller.minimum)
+
+router
+  .route('/maximum')
+  .get(Controller.maximum)
+
 router.use(Controller.errorHandler)
 
 export default router
